2008-11-06	Brian Tarricone <bjt23@cornell.edu>

	* xfce4-session/xfsm-manager.c: Only one dbus ShutdownCancelled
	  signal is enough, really.  And I guess it wouldn't get sent
	  at all if <= 1 client was interacting.

2008-11-05	Brian Tarricone <bjt23@cornell.edu>

	* xfce4-session/shutdown.c,doc/README.Kiosk: Add 'SaveShutdown'
	  kiosk capability that allows admins to restrict the ability to
	  save the session on logout (bug 2998).

2008-11-05	Brian Tarricone <bjt23@cornell.edu>

	* xfce4-session/xfsm-startup.c: Be sure to set the current
	  working directory of restored clients when starting them.

2008-11-05	Brian Tarricone <bjt23@cornell.edu>

	* xfce4-session/xfsm-manager.c: Ignore timeout errors from dbus
	  when using HAL to suspend/hibernate.

2008-11-01	Brian Tarricone <bjt23@cornell.edu>

	* xfce4-session/main.c: Fix minor one-time memleak.

2008-11-01	Brian Tarricone <bjt23@cornell.edu>

	* xfce4-session/xfsm-manager.c: Watch for dbus disconnects and
	  be sure we aren't terminated.
	* xfce4-session/xfsm-{client,manager}.c: Manage the lifecycle of
	  the DBusGConnection reference; not strictly necessary, as it
	  should be a shared connection, but I like being correct.

2008-11-01	Brian Tarricone <bjt23@cornell.edu>

	* xfce4-session/xfsm-shutdown-helper.c: Use dbus-default method
	  call timeout (which appears to be 25 seconds) rather than hard-
	  coding 2 seconds.  Fix a possible crash if a possible (however
	  unlikely) error path is taken.

2008-11-01	Brian Tarricone <bjt23@cornell.edu>

	* *: Implement suspend/hibernate support using HAL.  Partial patch
	  from Michael Casadevall.
	* xfce4-session/shutdown.c: Add buttons for suspend/hibernate.
	* xfce4-session/xfsm-manager.c: Handle suspend and hibernate as
	  initiated from the dialog or over dbus.  Don't quit the SM
	  after a successful suspend/hibernate.  Show errors to the user
	  via dialog boxes rather than printfs to console.